rosettanet/2.0/modules/ROOT/pages/rosettanet-connector-reference.adoc
= RosettaNet Connector 2.0 Reference - Mule 4
:page-aliases: connectors::rosettanet/rosettanet-connector-reference.adoc

Anypoint Connector for RosettaNet (Rosettanet Connector) provides B2B functionality that uses the RosettaNet Information Framework (RNIF) for the information exchange of RosettaNet Partner Interface Process (PIP) messages.

Release Notes: xref:release-notes::connector/rosettanet-connector-release-notes-mule-4.adoc[RosettaNet Connector Release Notes]

[[config]]
== Configurations

Configuration for RosettaNet Connector.

=== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name of this configuration. Connectors reference the configuration with this name. | | x
| Global HTTP Listener a| String |  Reference to the global HTTP Listener definition for the service endpoint used by the partner for action and signal messages.|  | x
| Service Endpoint Path a| String | Service endpoint path, appended to the base path of HTTP Listener.|  | x
| Global HTTP Request a| String |  Global HTTP request definition for the partner service endpoint. This value is used when sending action and signal messages. |  | x
| Request Endpoint Path a| String |  Partner endpoint path, appended to the base path on an HTTP request. |  | x
| Keystore path a| String |  Keystore that contains trusted partner certificates and the connector's private signing key and certificate (JKS format).|  |
| Keystore access password a| String |  Access password for the keystore. |  |
| Signing key password a| String |  Private signing key password (required if signing action and signal messages). |  |
| Override message signing a| Enumeration, one of:

** ALWAYS
** NEVER |  Turns message signing on or off. Setting this value to `ALWAYS` overrides the signing configured by the PIP definition. |  |
| Global usage code a| Enumeration, one of:

** Test
** Production | Whether to operate in test mode or production mode.|  `Production`|
a| Object store reference a| Object Store |  Object store configuration reference:

* If specified, the connector uses the referenced object store configuration to retain sent messages for acknowledgments and retries.
* If not specified, the connector uses the default persistent object store to retain sent messages for acknowledgments and retries. 
|  |
| Mule DUNS identifier a| String |  DUNS business identifier for the organization. |  | x
a| Mule location identifier a| String |  Location identifier for the organization:

*  If specified, this value is included in all sent messages and verified in all received messages. 
* If not specified, no value is sent, and received values are ignored. |  |
| Partner DUNS identifier a| String |  Expected DUNS business identifier for the partner organization.|  | x
| Partner location identifier a| String |  Expected location identifier for the partner organization. 

* If specified, this value is included in all sent messages and verified in all received messages. 
* If not specified, no value is sent and received values are ignored. |  |
| Role in PIP a| Enumeration, one of:

** INITIATOR
** RESPONDER |  Connector's role in the PIP. |  | x
| PIP definition path a| String |  PIP file path.|  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.
This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate.|  |
|===

== Sources
* <<actionSource>>
* <<completionSource>>

[[actionSource]]
=== Action Source
`<rosetta:action-source>`

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster.|  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>

* <<non-repeatable-stream>> |  Configures how Mule processes streams. By default, Mule uses repeatable streams. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Configures a policy for processing the redelivery of the same message. |  |
|===

==== Output
[%autowidth.spread]
|===

|Type |Binary
| Attributes Type a| <<MessageAttributes>>
|===

==== For Configurations
* <<config>>

[[completionSource]]
=== Completion Source
`<rosetta:completion-source>`

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean |  Whether this source should be executed only on the primary node when running in a cluster. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> | Configures a policy for processing the redelivery of the same message.   |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<Completion>>
| Attributes Type a| <<MessageAttributes>>
|===

==== For Configurations
* <<config>>

== Operations
* <<sendAction>>

[[sendAction]]
=== Send Action
`<rosetta:send-action>`

Transmits the relevant electronic document to a trading partner. 

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Initiating action a| <<ReplyAttributes>> | Lists the reply attributes to send inside the Service header in the MIME message.|  |
| Content a| Binary | Contents of the business document being exchanged between trading partners.  |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configures how Mule processes streams. By default, Mule uses repeatable streams.|  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field.|  `#[payload]` |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<MessageAttributes>>
|===

==== For Configurations
* <<config>>

==== Throws
* ROSETTA:WRITE
* ROSETTA:CONFIGURATION
* ROSETTA:PARSE
* ROSETTA:UNKNOWN

== Object Types

[[Completion]]
=== Completion

Completion status and details for the *Completion Source* source.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Completion Code a| Enumeration, one of:

** SUCCESS
** FAILURE
** EXCEPTION a| Type of completion for the action message. Valid values are:

*** SUCCESS: An acknowledgment signal was received from the partner.
*** EXCEPTION: An exception signal was received from the partner.
*** FAILURE: No response signal was received from the partner after the number of transmission attempts defined in the PIP configuration. |  | x
| Exception Detail a| <<ExceptionDetail>> | Details of the received exception signal. Present if the completion code is `EXCEPTION`. |  |
| Mime Data a| Binary | Received MIME signal message provided to the application in support of signed acknowledgment signals. Present if the completion code is `SUCCESS` or `EXCEPTION`. |  |
|===

[[ExceptionDetail]]
=== Exception Detail

Details of the received exception signal.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Exception Code a| String | Error code. |  | x
| Exception Error Description a| String | Error description.
 |  | x
| Exception Component Code a| String | Code that identifies the transaction for which the error occurred. |  | x
| Exception Type a| String | Error category. |  | x
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies *Max Idle Time*. |  |
|===

[[MessageAttributes]]
=== Message Attributes

Output of the *Action Source* source, *Completion Source* source, or *Send Action* operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Message Id a| String | Unique identifier of the message. |  | x
| Partner Business Id a| String | Unique identifier of the trading partner. |  | x
| Partner Location Id a| String | Identifier that represents the trading partner's location. |  | x
| Reply Attributes a| <<ReplyAttributes>> | Identifier values used when generating an action message in reply to another action. The *Action Source* source sets this value. |  | x
| Mime Data a| Binary | MIME action or signal message, including the signature, if signing is used. The app supplies this value to
 support non-repudiation. |  | x
| Acknowledge Data a| Binary | MIME acknowledgment signal returned to the sender, including the signature, if signing is used. The *Action Source* source sets this value. |  | x
|===

[non-repeatable-stream]
=== Non-repeatable Stream

Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost.

[[reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If `false`, the reconnection strategy runs in a separate, non-blocking thread. |`true` |
|===

[[reconnect-forever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |`true` |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times that a message can be redelivered and processed unsuccessfully before triggering a `process-failed-message`. |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | Secure hashing algorithm to use if *Use Secure Hash* is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload’s `hashCode()` returned. | `SHA-256` |
| Id Expression a| String | One or more expressions that determine when a message was redelivered. This property can be set only if *Use Secure Hash* is `false`. |  |
| Object Store a| Object Store | Configures the object store that stores the redelivery counter for each message. |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number a| Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.
* Configure a smaller buffer size to decrease memory load at the expense of response time. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for *Max In Memory Size*. |  |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the maximum buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max Buffer Size* value. |  |
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand.|  |
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit.|  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Max Buffer Size* fields. |  |
|===

[[ReplyAttributes]]
=== Reply Attributes

Configures the values used when generating an action message in reply to another action.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Message Id a| String | Identifier of the message associated with the reponse. |  | x
| Action Id a| String | Identifier that indicates the type of respone. |  | x
| Pip Instance Id a| String | Identifier associated with an instance of a PIP. |  | x
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Anypoint Connectors Overview]
* https://help.mulesoft.com[MuleSoft Help Center]
